# sesac-test

./: main.py  pyproject.toml
codes/: biggest.py  count_even.py  list_comprehension.py  odd_sum.py
