[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "lab>=8.9",
]
